Animation Page Updated

--- a/animation/project-2/index.html
+++ b/animation/project-2/index.html
@@ -72,8 +72,8 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="" data-aos="fade-up">
-            <h2>Whispers of the Enchanted Forest</h2>
-            <p>It is an animated tale of magic and harmony as ancient secrets come alive, weaving dreams and reality in a visually captivating celebration.</p>
+            <h2>Ayodhya - Ram Mandir: The Symbol of Sanatana Dharma</h2>
+            <p>Embark on a divine journey in a one-minute animated spectacle, capturing the grand inauguration of the Lord Ram temple in Ayodhya.</p>
           </div>
         </div>
       </div>
@@ -81,9 +81,9 @@
       <div class="site-section pb-0">
         <div class="container">
           <div class="row align-items-stretch">
-            <div class="col-md-8" data-aos="fade-up" id="video1">
+            <div class="col-md-8" data-aos="fade-up">
               <div class="video-container">
-                <iframe width="640" height="564" src="https://www.youtube.com/embed/OQpitmStz50?si=wvGhJybUSPP9cbD7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/906940689?h=fd1d3d5749" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
               </div>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -104,19 +104,20 @@
           </div>
         </div>
     </section><!-- End Overview Section -->
-    
 
     <!-- ======= Brief Concept Section ======= -->
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
             <h3 class="h3 heading">Brief Concept</h3>
-            <p>Whispers of the Enchanted Forest" is an animated film where Cotton, the guardian of a magical realm, discovers a forgotten book with ancient secrets. Opening its pages releases mystical sprites, awakening the forest's creatures and filling it with enchantment. The film explores the harmony between dreams and reality, showcasing the power of embracing enchantment. With captivating visuals and an enchanting soundtrack, it creates a magical atmosphere for audiences of all ages.</p>
+            <p>This one-minute animated short film captures the glorious inauguration of the Lord Ram temple in Ayodhya. It begins with a spiritual atmosphere, 
+              showcasing the lighting of diyas and the arrival of dignitaries. The central focus is on unveiling the divine idol of Lord Ram, followed by grand celebrations including
+               fireworks, dances, and cultural performances symbolizing unity in diversity. Viewers are invited to join in offering prayers, receiving prasad, exploring the temple, 
+               and receiving final blessings from Shree Ram. The film aims to create a divine spectacle, celebrating faith, unity, and the monumental inauguration of the Ram temple.</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
     
-
     <!-- ======= Previous/Next Section ======= -->
     <div class="container py-2 py-md-5">
       <div class="row">
