--- a/index.html
+++ b/index.html
@@ -190,8 +190,17 @@
 
         <div id="Animation" class="tabcontent">
           <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+            <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="animation/project-1" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Sage Welcome Ux/Ui</h3>
+                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/coming-soon.png">
+              </a>
+            </div>
+            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="animation/project-2" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Ayodhya-Ram Mandir</h3>
                   <!--span>Sub-heading</span-->
@@ -200,7 +209,7 @@
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="animation/project-2" class="item-wrap fancybox">
+              <a href="animation/project-3" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Enchanted Forest</h3>
                   <!--span>Sub-heading</span-->
@@ -209,21 +218,12 @@
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="animation/project-3" class="item-wrap fancybox">
+              <a href="animation/project-4" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Hello Friends!</h3>
                   <!--span>Sub-heading</span-->
                 </div>
                 <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 09.webp">
-              </a>
-            </div>
-            <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="#" class="item-wrap fancybox">
-                <div class="work-info">
-                  <h3>Heading</h3>
-                  <!--span>Sub-heading</span-->
-                </div>
-                <img class="img-fluid" src="assets/img/coming-soon.png">
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
