--- a/animation/project-2/index.html
+++ b/animation/project-2/index.html
@@ -109,7 +109,7 @@
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-            <h3 class="h3 heading">Brief Concept</h3>
+            <h3 class="h3 heading">Brief / Concept</h3>
             <p>This one-minute animated short film captures the glorious inauguration of the Lord Ram temple in Ayodhya. It begins with a spiritual atmosphere, 
               showcasing the lighting of diyas and the arrival of dignitaries. The central focus is on unveiling the divine idol of Lord Ram, followed by grand celebrations including
                fireworks, dances, and cultural performances symbolizing unity in diversity. Viewers are invited to join in offering prayers, receiving prasad, exploring the temple, 
