--- a/animation/project-4/index.html
+++ b/animation/project-4/index.html
@@ -114,7 +114,7 @@
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-          <h3 class="h3 heading">Brief Concept</h3>
+          <h3 class="h3 heading">Brief / Concept</h3>
           <p>The idea was to create an informative video for explaining the market need for Product & Explainer Videos.
             I have used variety of different graphic style to showcase my skills. I have also applied the 12 basic
             principles of animation to make it look more dynamic.</p>
