--- a/video/project-1/index.html
+++ b/video/project-1/index.html
@@ -110,7 +110,7 @@
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-            <h3 class="h3 heading">Brief Concept</h3>
+            <h3 class="h3 heading">Brief / Concept</h3>
             <p>This video was made for an invitation to participate in Sarva Samvriddhi Naga Pratishtha that took place on October 9 at the Isha Yoga Center in Bengaluru, India.</p>
             <p>Sadhguru consecrated a Naga deity during the Sarva Samvriddhi Naga Pratishtha, providing an unparalleled opportunity to experience mystical dimensions. It was a once-in-a-lifetime opportunity to participate in the esoteric Yogic process of Pratishtha, typically only shared with closed groups of people.</p>
         </div>
