--- a/video/project-2/index.html
+++ b/video/project-2/index.html
@@ -111,7 +111,7 @@
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-            <h3 class="h3 heading">Brief Concept</h3>
+            <h3 class="h3 heading">Brief / Concept</h3>
             <p>In this video, Sadhguru describes how everything you perceive through your five sense organs is a dream on one level. It is relative, so that’s why we call it as ‘maya.’ This does not mean it doesn't exist, but rather, it is not perceived the way you experience things through your five sense organs. Its nature is different.</p>
         </div>
       </div>
