--- a/video/project-3/index.html
+++ b/video/project-3/index.html
@@ -111,7 +111,7 @@
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-            <h3 class="h3 heading">Brief Concept</h3>
+            <h3 class="h3 heading">Brief / Concept</h3>
             <p>During the Indian leg of the #SaveSoil journey, a traditional wrestling akhada in Rewari, Haryana, hosts Sadhguru, where the wrestlers interact with Sadhguru to learn more about the human body, India’s ancient martial art Kalaripayattu, and the spirit of sportsmanship and brotherhood.</p>
              <p>Save Soil, a global movement envisioned by Sadhguru, seeks to bring about a concerted, conscious response to impending soil extinction. Action now to #SaveSoil.</p>
         </div>
