--- a/video/project-4/index.html
+++ b/video/project-4/index.html
@@ -110,7 +110,7 @@
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-            <h3 class="h3 heading">Brief Concept</h3>
+            <h3 class="h3 heading">Brief / Concept</h3>
             <p>In this video, Sadhguru talks about the meaning of genius. Either one can consciously move towards becoming a genius or unconsciously become a genius. Sadhguru discusses the lives of Beethoven and Ramanujan, geniuses in their respective fields, and answers a question about whether such genius is the result of past lives.</p>
         </div>
       </div>
