--- a/video/project-5/index.html
+++ b/video/project-5/index.html
@@ -110,7 +110,7 @@
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-            <h3 class="h3 heading">Brief Concept</h3>
+            <h3 class="h3 heading">Brief / Concept</h3>
             <p>This video is about two heroes who took the responsibility to spread awareness about the Save Soil Campaign, an initiative by Sadhguru. A duo of people, Jai Solanki and Pradeep Yadav, undertook a historic walk across India, covering 3600 km, visiting 43 cities, and crossing 6 states in 5 months.</p>
         </div>
       </div>
