--- a/animation/project-1/index.html
+++ b/animation/project-1/index.html
@@ -88,7 +88,7 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <div class="video-container">
+              <!-- <div class="video-container"> -->
                 <canvas id="canvas" width="640" height="564"></canvas>
 
                 <script src="https://unpkg.com/@rive-app/canvas@2.10.3"></script>
@@ -103,7 +103,7 @@
                     },
                   });
                 </script>
-              </div>
+              <!-- </div> -->
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <h3 class="h3 heading">Credits</h3>
@@ -133,10 +133,7 @@
         <div class="row align-items-end">
           <h3 class="h3 heading">Brief / Concept</h3>
 
-          <video autoplay loop muted playsinline>
-            <source src="/assets/img/sage-demo.gif" type="video/gif">
-            Your browser does not support the video tag.
-          </video>
+          <img src="/assets/img/sage-demo.gif" alt="Sage Demo GIF" class="gif">
 
           <p>In the above project, the software that will ultimately load this file doesn’t
             need to know anything about the design, shapes, or the sequence the animations
