--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                   <h3>Sage Welcome Ux/Ui</h3>
                   <!--span>Sub-heading</span-->
                 </div>
-                <img class="img-fluid" src="assets/img/coming-soon.png">
+                <img class="img-fluid" src="assets/img/sage.png">
               </a>
             </div>
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
