--- a/animation/project-1/index.html
+++ b/animation/project-1/index.html
@@ -133,7 +133,9 @@
         <div class="row align-items-end">
           <h3 class="h3 heading">Brief / Concept</h3>
 
-          <img src="/assets/img/sage-demo.gif" alt="Sage Demo GIF" class="gif">
+          <div class="gif_container">
+            <img src="/assets/img/sage-demo.gif" alt="Sage Demo GIF" class="gif">
+          </div>
 
           <p>In the above project, the software that will ultimately load this file doesn’t
             need to know anything about the design, shapes, or the sequence the animations
