--- a/animation/project-1/index.html
+++ b/animation/project-1/index.html
@@ -26,7 +26,7 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
   <!-- Template Main CSS File -->
-  <link href="/assets/css/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: MyPortfolio - v4.7.0
@@ -75,7 +75,8 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="" data-aos="fade-up">
-            <h2>Rive - The era of Runtime Design</h2>
+            <h2>Sage Welcome Ux/Ui</h2>
+            <h4>Rive - The era of Runtime Design</h4>
             <p>Rive is designed for the world of runtime. Runtime is the period of time during which a program is
               running. This tools help us to create interactive graphics using the new format. These tools empower
               designers and animators to think more like devs. At the same time, they free up engineering resources, not
