--- a/animation/project-1/index.html
+++ b/animation/project-1/index.html
@@ -89,8 +89,8 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <div class="video-container" id="rive_canvas">
-                <canvas id="canvas" width="640" height="564"></canvas>
+              <!-- <div class="video-container" id="rive_canvas"> -->
+                <canvas class="video-container" id="canvas" width="640" height="564"></canvas>
 
                 <script src="https://unpkg.com/@rive-app/canvas@2.10.3"></script>
                 <script>
@@ -104,7 +104,7 @@
                     },
                   });
                 </script>
-              </div>
+              <!-- </div> -->
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <h3 class="h3 heading">Credits</h3>
