--- a/animation/project-3/index.html
+++ b/animation/project-3/index.html
@@ -89,11 +89,11 @@
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <h3 class="h3 heading">Credits</h3>
               <div class="mb-3">
-                <strong>Content curation, AI image generation and Video editing - </strong>
+                <strong>Content curation, AI image generation and Video editing:</strong>
                 <span>Navin Kumar</span>
                 <p></p>
               </div>
-              <strong class="mb-3">Softwares</strong>
+              <strong class="mb-3">Softwares:</strong>
               <ul class="list-unstyled mb-5">
                 <li>ChatGPT (LLM)</li>
                 <li>Draw Things (Stable Diffusion)</li>
