--- a/animation/project-4/index.html
+++ b/animation/project-4/index.html
@@ -94,10 +94,10 @@
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <h3 class="h3 heading">Credits</h3>
               <div class="mb-3">
-                <strong>Storyboard, Design and Animation -</strong>
+                <strong>Storyboard, Design and Animation:</strong>
                 <span>Navin Kumar</span>
               </div>
-              <strong class="mb-3">Softwares</strong>
+              <strong class="mb-3">Softwares:</strong>
               <ul class="list-unstyled mb-5">
                 <li>Illustrator</li>
                 <li>After Effects</li>
