--- a/animation/project-1/index.html
+++ b/animation/project-1/index.html
@@ -143,7 +143,7 @@
           <div class="rive_cont">
             <img src="/assets/img/sage-demo.gif" alt="Sage Demo GIF" class="gif">
 
-            <p class="head_sage">In the adjacent project, the software that will ultimately load this file doesn’t
+            <p>In the adjacent project, the software that will ultimately load this file doesn’t
               need to know anything about the design, shapes, or the sequence the animations
               need to play in. It just tells the Rive graphic that an area was hovered; the visual
               state machine controls the rest.</p>
