Rive Animation UI

--- a/animation/project-1/index.html
+++ b/animation/project-1/index.html
@@ -90,11 +90,11 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
 
-              <div class="video-container">
+              <!-- <div class="video-container"> -->
                 <div class="rive_canvas">
                   <canvas id="canvas" width="640" height="564"></canvas>
                 </div>
-              </div>
+              <!-- </div> -->
               <script src="https://unpkg.com/@rive-app/canvas@2.10.3"></script>
               <script>
                 const r = new rive.Rive({
@@ -142,7 +142,7 @@
           <h3 class="h3 heading">Brief / Concept</h3>
             <img src="/assets/img/sage-demo.gif" alt="Sage Demo GIF" class="gif">
 
-            <p>In the adjacent project, the software that will ultimately load this file doesn’t
+            <p>In the above project, the software that will ultimately load this file doesn’t
               need to know anything about the design, shapes, or the sequence the animations
               need to play in. It just tells the Rive graphic that an area was hovered; the visual
               state machine controls the rest.</p>
