animation page updated

--- a/animation/project-2/index.html
+++ b/animation/project-2/index.html
@@ -72,8 +72,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="" data-aos="fade-up">
-            <h2>Ayodhya - Ram Mandir: The Symbol of Sanatana Dharma</h2>
-            <p>Embark on a divine journey in a one-minute animated spectacle, capturing the grand inauguration of the Lord Ram temple in Ayodhya.</p>
+            <h2>FlyingPCG</h2>
           </div>
         </div>
       </div>
@@ -83,21 +82,26 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
               <div class="video-container">
-                <iframe src="https://player.vimeo.com/video/906940689?h=fd1d3d5749" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/961408879?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
               </div>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <h3 class="h3 heading">Credits</h3>
               <div class="mb-3">
-                <strong>Content curation, AI image generation and Video editing: </strong>
+                <strong>Assets & Illustrations:</strong>
+                <span>Primecraft Games</span>
+                <p></p>
+              </div>
+              <div class="mb-3">
+                <strong>Rigging & Animation:</strong>
                 <span>Navin Kumar</span>
                 <p></p>
               </div>
               <strong class="mb-3">Softwares:</strong>
               <ul class="list-unstyled mb-5">
-                <li>ChatGPT (LLM)</li>
-                <li>Draw Things (Stable Diffusion)</li>
-                <li>DaVinci Resolve</li>
+                <li>Spine</li>
+                <li>After Effects</li>
+                <li>Premiere Pro</li>
               </ul>
               <!--p><a href="#" class="readmore">Visit Website</a></p-->
             </div>
@@ -110,10 +114,9 @@
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
             <h3 class="h3 heading">Brief / Concept</h3>
-            <p>This one-minute animated short film captures the glorious inauguration of the Lord Ram temple in Ayodhya. It begins with a spiritual atmosphere, 
-              showcasing the lighting of diyas and the arrival of dignitaries. The central focus is on unveiling the divine idol of Lord Ram, followed by grand celebrations including
-               fireworks, dances, and cultural performances symbolizing unity in diversity. Viewers are invited to join in offering prayers, receiving prasad, exploring the temple, 
-               and receiving final blessings from Shree Ram. The film aims to create a divine spectacle, celebrating faith, unity, and the monumental inauguration of the Ram temple.</p>
+            <p>I created this treasure box logo animation as part of a challenge organized by Primecraft Games. 
+                It was a really fun time with lots of learning. I used Spine software for the treasure box animation, 
+                After Effects for the particles, and Premiere Pro for editing.</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
