--- a/animation/project-5/index.html
+++ b/animation/project-5/index.html
@@ -14,9 +14,7 @@
   <link href="/assets/img/logo-nk-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
@@ -44,8 +42,7 @@
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe,
-            storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
@@ -59,13 +56,13 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <div class="navbar-brand">
-        <a href="/">
+        <div class="navbar-brand">
+          <a href="/">
           <img class="logo" src="/assets/img/logo-nk.png"></a>
-      </div>
-      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
-        <span></span>
-      </a>
+        </div>
+        <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
+          <span></span>
+        </a>
     </div>
   </nav>
 
@@ -75,9 +72,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="" data-aos="fade-up">
-            <h2>Hello Friends!</h2>
-            <p>This video is a brief introduction about my services and also the first project. I made this video to
-              reach out to my potential clients.</p>
+            <h2>FlyingPCG</h2>
           </div>
         </div>
       </div>
@@ -87,21 +82,25 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
               <div class="video-container">
-                <iframe src="https://player.vimeo.com/video/481770486" width="640" height="564" frameborder="0"
-                  allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/961408879?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
               </div>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <h3 class="h3 heading">Credits</h3>
               <div class="mb-3">
-                <strong>Storyboard, Design and Animation:</strong>
+                <strong>Assets & Illustrations:</strong>
+                <span>Primecraft Games</span>
+                <p></p>
+              </div>
+              <div class="mb-3">
+                <strong>Rigging & Animation:</strong>
                 <span>Navin Kumar</span>
+                <p></p>
               </div>
               <strong class="mb-3">Softwares:</strong>
               <ul class="list-unstyled mb-5">
-                <li>Illustrator</li>
+                <li>Spine</li>
                 <li>After Effects</li>
-                <li>Audacity</li>
                 <li>Premiere Pro</li>
               </ul>
               <!--p><a href="#" class="readmore">Visit Website</a></p-->
@@ -114,338 +113,23 @@
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-          <h3 class="h3 heading">Brief / Concept</h3>
-          <p>The idea was to create an informative video for explaining the market need for Product & Explainer Videos.
-            I have used variety of different graphic style to showcase my skills. I have also applied the 12 basic
-            principles of animation to make it look more dynamic.</p>
+            <h3 class="h3 heading">Brief / Concept</h3>
+            <p>I created this treasure box logo animation as part of a challenge organized by Primecraft Games. 
+                It was a really fun time with lots of learning. I used Spine software for the treasure box animation, 
+                After Effects for the particles, and Premiere Pro for editing.</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
-
-
-
-
-
-
-
-
-    <section class="section site-portfolio pt-0 pb-5">
-
-      <div class="story_slider">
-
-        <h3 class="s_head" data-aos="fade-up" data-aos-delay="200">Storyboard</h3>
-        <div class="slider-container" data-aos="fade-up" data-aos-delay="200">
-          <!-- First Slider with Heading -->
-          <div class="slider" id="slider1">
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 1">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 2">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 3">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 4">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 5">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 6">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 7">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 8">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 9">
-            </div>
-            <div class="progress-container">
-              <div class="progress-bar"></div>
-            </div>
-          </div>
-        </div>
-
-        <h3 class="s_design" data-aos="fade-up" data-aos-delay="200">Design</h3>
-        <div class="slider-container" data-aos="fade-up" data-aos-delay="200">
-          <!-- Second Slider with Heading -->
-          <div class="slider" id="slider2">
-            <div class="slide">
-              <img src="/assets/img/Hello Friends/Hello Friends 01.webp" alt="Slide 1">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/Hello Friends/Hello Friends 02.webp" alt="Slide 2">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/Hello Friends/Hello Friends 03.webp" alt="Slide 3">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/Hello Friends/Hello Friends 04.webp" alt="Slide 4">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/Hello Friends/Hello Friends 05.webp" alt="Slide 5">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/Hello Friends/Hello Friends 06.webp" alt="Slide 6">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/Hello Friends/Hello Friends 07.webp" alt="Slide 7">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/Hello Friends/Hello Friends 08.webp" alt="Slide 8">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/Hello Friends/Hello Friends 09.webp" alt="Slide 9">
-            </div>
-            <div class="progress-container">
-              <div class="progress-bar"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <!-- JavaScript for Slideshow -->
-    <script>
-      // Function to show a specific slide for a given slider
-      function showSlide(sliderIndex, n) {
-        const slider = document.querySelectorAll('.slider')[sliderIndex];
-        const slides = slider.querySelectorAll('.slide');
-        const progressBar = slider.querySelector('.progress-bar');
-        let currentIndex = 0;
-
-        slides.forEach((slide) => {
-          slide.style.display = 'none';
-        });
-
-        slides[n].style.display = 'block';
-
-        // Update the progress bar width
-        progressBar.style.width = ((n + 1) / slides.length * 100) + '%';
-      }
-
-      // Function to automatically advance to the next slide
-      function autoAdvanceSlider(sliderIndex) {
-        const slider = document.querySelectorAll('.slider')[sliderIndex];
-        const slides = slider.querySelectorAll('.slide');
-        let currentIndex = 0;
-
-        setInterval(function () {
-          slides[currentIndex].style.display = 'none';
-          currentIndex = (currentIndex + 1) % slides.length;
-          slides[currentIndex].style.display = 'block';
-          showSlide(sliderIndex, currentIndex); // Update the progress bar
-        }, 5000); // Change slide every 5 seconds
-      }
-
-      // Function to handle swipe gestures
-      function handleSwipe(sliderIndex) {
-        const slider = document.querySelectorAll('.slider')[sliderIndex];
-        let touchStartX;
-
-        slider.addEventListener('touchstart', (e) => {
-          touchStartX = e.touches[0].clientX;
-        });
-
-        slider.addEventListener('touchend', (e) => {
-          const touchEndX = e.changedTouches[0].clientX;
-          const delta = touchEndX - touchStartX;
-
-          if (delta > 30) { // Swipe right (previous slide)
-            showPreviousSlide(sliderIndex);
-          } else if (delta < -30) { // Swipe left (next slide)
-            showNextSlide(sliderIndex);
-          }
-        });
-      }
-
-      // Function to show the previous slide
-      function showPreviousSlide(sliderIndex) {
-        const slider = document.querySelectorAll('.slider')[sliderIndex];
-        const slides = slider.querySelectorAll('.slide');
-        let currentIndex = 0;
-
-        for (let i = 0; i < slides.length; i++) {
-          if (slides[i].style.display === 'block') {
-            currentIndex = i;
-            break;
-          }
-        }
-
-        slides[currentIndex].style.display = 'none';
-        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-        slides[currentIndex].style.display = 'block';
-        showSlide(sliderIndex, currentIndex); // Update the progress bar
-      }
-
-      // Function to show the next slide
-      function showNextSlide(sliderIndex) {
-        const slider = document.querySelectorAll('.slider')[sliderIndex];
-        const slides = slider.querySelectorAll('.slide');
-        let currentIndex = 0;
-
-        for (let i = 0; i < slides.length; i++) {
-          if (slides[i].style.display === 'block') {
-            currentIndex = i;
-            break;
-          }
-        }
-
-        slides[currentIndex].style.display = 'none';
-        currentIndex = (currentIndex + 1) % slides.length;
-        slides[currentIndex].style.display = 'block';
-        showSlide(sliderIndex, currentIndex); // Update the progress bar
-      }
-
-      // Initialize swipe gestures and auto-advancing for each slider
-      document.querySelectorAll('.slider').forEach((slider, index) => {
-        showSlide(index, 0);
-        autoAdvanceSlider(index);
-        handleSwipe(index);
-      });
-    </script>
-
-
-    <!-- ======= Storyboard Section ======= -->
-    <section class="section site-portfolio pt-0 pb-5">
-      <div class="container">
-        <!-- Desktop View -->
-        <div class="storyboard">
-          <div class="row mb-3 align-items-center">
-            <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-              <h3 class="story">Storyboard</h3>
-            </div>
-          </div>
-          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Storyboard Section -->
-
-    <!-- ======= Design Section ======= -->
-    <section class="section site-portfolio pt-0 pb-5">
-      <div class="container">
-        <div class="storyboard">
-          <div class="row mb-3 align-items-center">
-            <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-              <h3 class="story">Design</h3>
-              <!--p class="mb-0">Enter your text</p-->
-            </div>
-          </div>
-          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 01.webp">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 02.webp">
-            </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 03.webp">
-            </div>
-            <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 04.webp">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 05.webp">
-            </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 06.webp">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 07.webp">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 08.webp">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 09.webp">
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-    </section><!-- End Design Section -->
-
-    <!-- ======= Animation Section ======= -->
-    <section class="section site-portfolio pt-0 pb-5">
-      <div class="space">
-        <div class="container">
-          <div class="row mb-3 align-items-center">
-            <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-              <h3 class="ani">Animation</h3>
-              <!--p class="mb-0">Enter your text</p-->
-            </div>
-          </div>
-
-          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-              <div class="video-container">
-                <video autoplay loop>
-                  <source src="/assets/video/Hello Friends/BTS 01.mp4">
-                </video>
-              </div>
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <div class="video-container">
-                <video autoplay loop>
-                  <source src="/assets/video/Hello Friends/BTS 02.mp4">
-                </video>
-              </div>
-            </div>
-            <!-- <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <div class="video-container">
-                <video autoplay loop>
-                  <source src="#">
-                </video>
-              </div>
-            </div> -->
-          </div>
-        </div>
-      </div>
-    </section><!-- End Animation Section -->
-
+    
     <!-- ======= Previous/Next Section ======= -->
     <div class="container py-2 py-md-5">
       <div class="row">
         <div class="col-md-12">
           <div class="align-left">
-            <a href="../project-4" class="previous round"><i class='bx bxs-chevron-left'></i></a>
+            <a href="../project-1" class="previous round"><i class='bx bxs-chevron-left'></i></a>
           </div>
           <div class="align-right">
-            <a href="../project-1" class="next round"><i class='bx bxs-chevron-right'></i></a>
+            <a href="../project-6" class="next round"><i class='bx bxs-chevron-right'></i></a>
           </div>
         </div>
       </div>
@@ -471,8 +155,7 @@
     </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="/assets/vendor/aos/aos.js"></script>
