--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 
       <!--Committed Changes on 22-08-2023-->
       <div class="box" data-aos="fade-up" data-aos-delay="200">
-        <button class="tablink" onclick="openPage('AI', this, '#323946')" id="defaultOpen"><img
+        <button class="tablink" onclick="openPage('AI', this, '#323946')"><img
             src="assets/img/robot.png" class="pic"><span class="text">&nbsp&nbspAI Art</span></button>
-        <button class="tablink" id="btn1" onclick="openPage('Animation', this, '#323946')"><img
+        <button class="tablink" id="btn1" onclick="openPage('Animation', this, '#323946')" id="defaultOpen"><img
             src="assets/img/animation_pic.png" class="pic"><span class="text">&nbsp&nbspAnimation</span></button>
         <button class="tablink" onclick="openPage('Video', this, '#323946')"><img src="assets/img/video_edit.png"
             class="pic"><span class="text">&nbsp&nbspVideo Editing</span></button>
@@ -190,6 +190,7 @@
 
         <div id="Animation" class="tabcontent">
           <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+            <!-- Section-1 -->
             <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="animation/project-1" class="item-wrap fancybox">
                 <div class="work-info">
@@ -199,49 +200,86 @@
                 <img class="img-fluid" src="assets/img/sage.png">
               </a>
             </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+            <!-- Section-2 -->
+            <!-- <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="animation/project-2" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>FlyingPCG</h3>
-                  <!--span>Sub-heading</span-->
                 </div>
                 <img class="img-fluid" src="assets/img/primecraft.png">
               </a>
+            </div> -->
+            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="#" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Wizard</h3>
+                </div>
+                <img class="img-fluid" src="assets/gif/wizard.gif" alt="Wizard GIF">
+              </a>
             </div>
-            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+            <!-- Section-3 -->
+            <!-- <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="animation/project-3" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Ayodhya-Ram Mandir</h3>
-                  <!--span>Sub-heading</span-->
+                </div>
+                <img class="img-fluid" src="assets/img/ram_mandir.jpg">
+              </a>
+            </div> -->
+            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="#" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Spine Boy</h3>
                 </div>
                 <img class="img-fluid" src="assets/img/ram_mandir.jpg">
               </a>
             </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+            <!-- Section-4 -->
+            <!-- <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="animation/project-4" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Enchanted Forest</h3>
-                  <!--span>Sub-heading</span-->
                 </div>
                 <img class="img-fluid" src="assets/img/forest.jpg">
               </a>
+            </div> -->
+            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="#" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>Happy Girl</h3>
+                </div>
+                <video class="img-fluid" src="assets/video/happy_girl.mp4" autoplay muted loop>
+                  Your browser does not support the video tag.
+                </video>
+              </a>
             </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+            <!-- Section-5 -->
+            <!-- <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="animation/project-5" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Hello Friends!</h3>
-                  <!--span>Sub-heading</span-->
                 </div>
                 <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 09.webp">
               </a>
+            </div> -->
+            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="animation/project-5" class="item-wrap fancybox">
+                <div class="work-info">
+                  <h3>FlyingPCG</h3>
+                </div>
+                <img class="img-fluid" src="assets/img/primecraft.png">
+              </a>
             </div>
+
+            <!-- Section-6 -->
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="#" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Heading</h3>
-                  <!--span>Sub-heading</span-->
+                  <h3>Annoyed Girl</h3>
                 </div>
-                <img class="img-fluid" src="assets/img/coming-soon.png">
+                <video class="img-fluid" src="assets/video/annoyed_girl.mp4" autoplay muted loop>
+                  Your browser does not support the video tag.
+                </video>
               </a>
             </div>
           </div>
