Animation Tab Updated

--- a/animation/project-5/index.html
+++ b/animation/project-5/index.html
@@ -129,7 +129,7 @@
             <a href="../project-1" class="previous round"><i class='bx bxs-chevron-left'></i></a>
           </div>
           <div class="align-right">
-            <a href="../project-6" class="next round"><i class='bx bxs-chevron-right'></i></a>
+            <a href="#" class="next round"><i class='bx bxs-chevron-right'></i></a>
           </div>
         </div>
       </div>
