updated animation tab

--- a/index.html
+++ b/index.html
@@ -319,11 +319,11 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial">
-                  <img src="assets/img/blank-profile-pic.png" alt="Image" class="img-fluid">
+                  <img src="assets/img/Shubhangi Wakodikar.png" alt="Image" class="img-fluid">
+                  <p>Navin is an exceptionally talented video designer. His creative capabilities help put forth the message in a fun manner to all age groups of audience. With his foresight, he brings forth the best in people through his animations and helps push limits, thereby helping achieve his team's goals. He is a great team player, looking out for his colleagues. Given a chance to work again with Navin, I would jump at the opportunity. He is an asset to any team that he may work in.</p>
                   <blockquote>
-                    <p>Description</p>
+                    <p>&mdash; Shubhangi Wakodikar</p>
                   </blockquote>
-                  <p>&mdash; Name</p>
                 </div>
               </div>
             </div>
