Optimised Videos and Images

--- a/about/index.html
+++ b/about/index.html
@@ -99,7 +99,7 @@
 
           <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up">
             <div class="aspect-ratio-box">
-              <img src="../assets/img/Navin.png" alt="Image" class="img-fluid">
+              <img src="../assets/img/Navin.webp" alt="Image" class="img-fluid">
             </div>
           </div>
 
